Closed Bug 31134 Opened 25 years ago Closed 25 years ago

Paste in edit menu not enabled

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: b.judd, Assigned: sfraser_bugs)

References

()

Details

(Whiteboard: [nsbeta2+][7/22])

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; N; Linux 2.2.14 ppc; en-US; m14) BuildID: 2000030215 When you select text and then copy to the clipboard the paste item in the edit menu will never ne enabled. You can however paste using the middle mouse button as normal. Reproducible: Always Steps to Reproduce: 1. Select some text. 2. Choose "copy" from the edit menu. 3. Click in a editable text widget 4. Look in the edit menu. The "paste" item is not selectable. 5. If you click the middle button, the text will paste. Actual Results: The "paste" menu item is not selectable
Hi, Gwyn --- Unfortunately, I can't reproduce this with today's Linux build (2000030909). Could you possibly try again on a more recent (e.g. past 36 hour) build? Thanks!
Component: Selection → Editor
Sorry there is no daily build for linuxppc and I can't build (I lack the disk space). Ack. Is there a more recent build for linuxppc available than M14?
Err, sorry, I don't think Linux PPC is a formally supported platform, although I may be mistaken.
This is either Simon or Pavlov.
Assignee: mjudge → sfraser
*blinks* I thought you guys supported anything people were willing to work on? At least that's what it says in my first ever bug #15399. Are you sure you aren't thinking of netscape not mozilla? I wonder how they got the linuxppc M14 build?
Yeah, you're right, I am thinking of the Netscape supported platform list, rather than the Mozilla list. I'd suggest trying the mozilla unix newsgroup where you can get a more informed answer. ;)
okay I'll try that when I get a chance
WORKSFORME in a snapshot build from 3/9/2000 at about 2:00 AM on Debian/PowerPC. I think it's probably gone. <open question>I built the M13 and M14 binaries, and I build nightlies regularly, are you saying there is interest in me uploading them? Would the mozilla.org people be interested in them, or should I put them on my personal site (southpole.penguinpowered.com). As builds go, they're all over the place - optimize, debug, tip, M14 branch, patches from bugs that haven't yet checked in... but I could label them slightly and put them somewhere if people care, at least occasionally. b.judd - I will put the nightly that I am using as I say this on my page at http://southpole.penguinpowered.com so that you can check this out. I'm marking worksforme, comment if it needs to be reopened (ie, you still see the problem in the nightly). Email me if you have trouble running the build, but I'll try to include the needed shared libs in the tarball (I statically link a few for the milestones that LinuxPPC has trouble with).
Status: UNCONFIRMED → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
Okay I'll give that a go. As a side note I would be really interested in having nightly ppc binaries available
It should be up real soon here. I will start putting occasional builds up on southpole then. I'll make it a category on the sidebar.
lemme make that clearer, I mean mozilla nightly's will be a categore in the sidebar of my webpage. Nothing to do with mozilla's sidebar.
Rubber-stamping as verified. Re: Linux stuff. You're far more likely to get a useful follow-up on netscape.public.mozilla.unix than here; I'd suggest posting there, but it's already being discussed there as we speak.
Status: RESOLVED → VERIFIED
Regardless of whether linux PPC is a supported platform, this is a problem on Intel linux as well. The editor's entire edit menu is greyed out virtually every time I look at it, and pasting via ^V or alt-V never works (though middle-mouse pasting works fine). I'd been assuming all this time that there was an open bug covering this. Reopening and nominating for nsbeta2.
Status: VERIFIED → UNCONFIRMED
Keywords: nsbeta2
Hardware: Macintosh → All
Resolution: WORKSFORME → ---
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
kin, akkana: sfraser is on vacation. I was going to grab this bug until I saw it was linux only. Can either of you pick this up? I'll even volunteer to copilot, if you want, but I need a linux savvy persona to own this.
Changing bug status to NEW since it is already [nsbeta2+].
Status: UNCONFIRMED → NEW
Ever confirmed: true
added fix by date in status field
Whiteboard: [nsbeta2+] → [nsbeta2+][8/2]
Oops! This is what happens when Eli stops eating dogfood for several days. Just copying and pasting within the URL bar does not work on today's Windows and Linux builds; the paste menu item is disabled. It does, however, work on the most recent Macintosh build that I have available, from July sixth.
OS: Linux → All
setting milestone
Whiteboard: [nsbeta2+][8/2] → [nsbeta2+][7/22]
Target Milestone: --- → M17
Fixed. I update the Paste menu item now when you Copy, and also on window and widget focus. The only case not dealt with is auto-copy on linux; if that's a problem, please open another bug.
Status: NEW → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
*** Bug 45393 has been marked as a duplicate of this bug. ***
sujay, can you verify with latest build please?
QA Contact: elig → sujay
Sujay is out today; QA assigning back to self for verification.
QA Contact: sujay → elig
Oops. Sujay was out yesterday. ;)
I can't reproduce this on any of today's or yesterday's commercial builds, on any platform. (all 3 checked) If anyone CC'd can reproduce this bug, please do add your $.02 and re-open. Thanks!
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.